Villanova_Dev1/src/objects/Campaign_Form_Item__c.object
<CustomObject>
    <description>Used to store items to be included in Campaign Event registration forms.</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Campaign_Form_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attachment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Campaign Form Item</label>
    <nameField>
        <label>Campaign Form Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Form Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>